--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@astrojs/node": "^9.4.4",
     "@astrojs/react": "^4.4.0",
     "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/vercel": "^9.0.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
